further preparations for rework

--- a/tinydb_test.ipynb
+++ b/tinydb_test.ipynb
@@ -13,81 +13,36 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8ffb2afc-c72e-41f3-ae14-11010eb9cb7b",
+   "id": "7073da23-85db-47bd-b8e3-2cea8abdf4bb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4.7.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(tinydb.__version__)"
+    "from tinydb.storages import JSONStorage\n",
+    "from tinydb.middlewares import CachingMiddleware"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "2cf937b3-600f-48f0-9337-5567a72449c5",
+   "execution_count": 47,
+   "id": "96449903-bcbf-4d8f-a1eb-f09a8475495a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<TinyDB tables=['TABLE 2', 'TABLE 1', '_default', 'fruits'], tables_count=4, default_table_documents_count=1, all_tables_documents_count=['TABLE 2=2', 'TABLE 1=2', '_default=1', 'fruits=7']>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "db = tinydb.TinyDB('db.json', sort_keys=True, indent=4, separators=(',', ': '))\n",
-    "print (db)"
+    "db = tinydb.TinyDB('db.json', storage=CachingMiddleware(JSONStorage),\n",
+    "                   sort_keys=True, indent=1, separators=(',', ': '))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4a3f3af4-47be-4ab4-aa89-ca7d3d228880",
+   "id": "e87cd171-74ce-4a86-b080-aea02bf711e1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<TinyDB tables=['TABLE 2', 'TABLE 1', '_default', 'fruits'], tables_count=4, default_table_documents_count=3, all_tables_documents_count=['TABLE 2=1', 'TABLE 1=1', '_default=3', 'fruits=5']>\n"
-     ]
-    }
-   ],
-   "source": [
-    "db.insert({'name': 'John', 'rank': 2})\n",
-    "\n",
-    "db.insert({'name': 'Peter', 'rank': 1})\n",
-    "\n",
-    "print (db)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a16edefa-ffa4-48ca-a105-0b59449aa581",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "8669f02c-80fe-4308-a784-19a9912f9d1b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<TinyDB tables=['TABLE 2', 'TABLE 1', '_default', 'fruits'], tables_count=4, default_table_documents_count=3, all_tables_documents_count=['TABLE 2=1', 'TABLE 1=1', '_default=3', 'fruits=5']>\n"
+      "<TinyDB tables=['requirements', 'version'], tables_count=2, default_table_documents_count=0, all_tables_documents_count=['requirements=1', 'version=1']>\n"
      ]
     }
    ],
@@ -97,28 +52,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "a1e1f310-5423-4059-a94b-87d8366b26a5",
+   "execution_count": 45,
+   "id": "794cb607-184a-463d-9703-f84e94dce4c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.storage.flush()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d72f322f-20fc-47bb-8060-ec9582177cd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.insert({'name': 'John', 'rank': 2})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "2cf937b3-600f-48f0-9337-5567a72449c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table=db.table('requirements')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "4a3f3af4-47be-4ab4-aa89-ca7d3d228880",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tinydb.table.Table"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "31737b63-de97-431e-b226-75519a93c77a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Table name='requirements', total=1, storage=<tinydb.middlewares.CachingMiddleware object at 0x7f99f8887eb0>>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "a16edefa-ffa4-48ca-a105-0b59449aa581",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<TinyDB tables=['TABLE 2', 'TABLE 1', '_default', 'fruits'], tables_count=4, default_table_documents_count=3, all_tables_documents_count=['TABLE 2=1', 'TABLE 1=1', '_default=3', 'fruits=6']>\n"
+      "[{'Age': 19, 'Name': 'Alice'}]\n"
      ]
     }
    ],
    "source": [
-    "table = db.table('fruits')\n",
-    "table.insert({'apples': 50})\n",
-    "print (db)"
+    "print(table.all())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "a28e08b4-e955-488d-ab99-0f5267e30633",
+   "execution_count": 32,
+   "id": "8669f02c-80fe-4308-a784-19a9912f9d1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "id": "7518a48c-fcc5-405a-b259-0e5c79849b9f",
    "metadata": {},
    "outputs": [
@@ -145,30 +181,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "1e0ed4b1-3f17-485c-b5f2-f62429f47814",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "24"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "db.insert({'name': 'John', 'rank': 2})\n",
-    "\n",
-    "db.insert({'name': 'Peter', 'rank': 1})"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "id": "1fef1586-66e6-4d5e-933e-0613b5ba489b",
    "metadata": {},
    "outputs": [
@@ -187,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "id": "7959d69e-6da8-4332-82f9-0ebaa48d386b",
    "metadata": {},
    "outputs": [
@@ -195,7 +216,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<TinyDB tables=['TABLE 2', 'TABLE 1', '_default', 'fruits'], tables_count=4, default_table_documents_count=5, all_tables_documents_count=['TABLE 2=1', 'TABLE 1=1', '_default=5', 'fruits=6']>\n"
+      "<TinyDB tables=['requirements', '_default', 'version'], tables_count=3, default_table_documents_count=2, all_tables_documents_count=['requirements=1', '_default=2', 'version=1']>\n"
      ]
     }
    ],
@@ -205,32 +226,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "16643b64-bd42-450b-a38d-bac3b7174246",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'apples': 50}, {'apples': 50}, {'apples': 50}, {'apples': 50}, {'apples': 50}, {'apples': 50}, {'apples': 50}, {'apples': 50}]\n"
-     ]
-    }
-   ],
-   "source": [
-    "db.insert({'name': 'John', 'rank': 2})\n",
-    "db.insert({'name': 'Peter', 'rank': 1})\n",
-    "\n",
-    "table = db.table('fruits')\n",
-    "table.insert({'apples': 50})\n",
-    "result = table.search(q.apples < 100)\n",
-    "\n",
-    "print (result)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 37,
    "id": "b4fdbbeb-bc34-48b8-b16d-0b121d351650",
    "metadata": {},
    "outputs": [
@@ -238,7 +242,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'name': 'Peter', 'rank': 1}, {'name': 'John', 'rank': 2}, {'name': 'Peter', 'rank': 1}]\n"
+      "[{'name': 'John', 'rank': 2}, {'name': 'John', 'rank': 2}]\n"
      ]
     }
    ],
@@ -248,17 +252,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 38,
    "id": "efa08be9-972a-4219-86d3-b6928f259b7e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[28, 30]"
+       "[]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,17 +273,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 39,
    "id": "63e18fab-eec2-448e-bd36-36f0cb49a384",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "2"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,47 +294,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "c85503f5-cefc-4580-a24e-2392adb292b0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "32"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "db.insert({'name': 'John', 'rank': 2})\n",
-    "db.insert({'name': 'Peter', 'rank': 1})"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "12f87999-80a7-480e-ab20-2fb7981c9e07",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<TinyDB tables=['TABLE 2', 'TABLE 1', '_default', 'fruits'], tables_count=4, default_table_documents_count=3, all_tables_documents_count=['TABLE 2=2', 'TABLE 1=2', '_default=3', 'fruits=8']>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(db)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 43,
    "id": "5252c90a-054b-48ee-a4c8-ec8f9176d87c",
    "metadata": {},
    "outputs": [
@@ -339,8 +319,7 @@
      "output_type": "stream",
      "text": [
       "{'name': 'John', 'rank': 2}\n",
-      "{'name': 'John', 'rank': 2}\n",
-      "{'name': 'Peter', 'rank': 1}\n"
+      "{'name': 'John', 'rank': 2}\n"
      ]
     }
    ],
@@ -369,17 +348,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 44,
    "id": "ab5fcd5b-cd78-4d0b-8c76-0c9139824d88",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[29, 31]"
+       "[1, 2]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,184 +366,6 @@
    "source": [
     "db.remove(q.name == 'John')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "id": "c95b4f67-193c-428d-9fc2-b59f37182754",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tinydb.storages import MemoryStorage"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "id": "2e977c44-1a0b-4cdc-a808-400b1f9109b4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db = tinydb.TinyDB(storage=MemoryStorage)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "id": "bd49b0f6-a064-44b3-9b8d-d6b48c883238",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<TinyDB tables=[], tables_count=0, default_table_documents_count=0, all_tables_documents_count=[]>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(db)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "id": "0576c25b-e644-4e7a-8aa9-01e3465a86cb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tinydb.storages import JSONStorage\n",
-    "from tinydb.middlewares import CachingMiddleware\n",
-    "db = tinydb.TinyDB('db.json', storage=CachingMiddleware(JSONStorage),\n",
-    "                   sort_keys=True, indent=4, separators=(',', ': '))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "id": "ab2f6213-6023-4165-a2ee-aa37a52e86a5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<TinyDB tables=['TABLE 2', 'TABLE 1', '_default', 'fruits'], tables_count=4, default_table_documents_count=1, all_tables_documents_count=['TABLE 2=2', 'TABLE 1=2', '_default=1', 'fruits=8']>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(db)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "id": "d5b86f67-6713-495e-b83d-becaaedd46fb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db.storage.flush()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "id": "7a23b16a-5ae0-4acd-8865-2bac2f4c73f9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'name': 'Peter', 'rank': 1}\n"
-     ]
-    }
-   ],
-   "source": [
-    "with db:\n",
-    "    for item in db:\n",
-    "        print(item)\n",
-    "db.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ce112a3-80ff-4b33-a18b-a36cb6694509",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "id": "719b59ce-8d7c-44d3-a51a-5e523e711ae1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "id": "0e69e504-c440-4324-a35e-5510edf40dd3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3a04bdf0-9f3e-419b-8b54-4acbc7978945",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "id": "985245de-653b-4388-8fe9-293d382f9e4f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p = Package()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "id": "8a802e1f-0952-478b-b172-a168e1ee9c29",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "id": "2b743565-d0ab-4305-b822-6c4304c2cd63",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "anam\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(p.name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "492045c9-7c07-4a55-8704-d54e30e209df",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -896,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "id": "36181790-aebd-4acd-a0e0-4b93d5af4892",
    "metadata": {},
    "outputs": [
@@ -905,6 +706,7 @@
      "output_type": "stream",
      "text": [
       "Table: requirements\n",
+      "Table: _default\n",
       "Table: version\n"
      ]
     }
@@ -919,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 50,
    "id": "dc8b1d1a-afc6-4d08-a937-ec8137c28df9",
    "metadata": {},
    "outputs": [
@@ -927,7 +729,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<TinyDB tables=['requirements', 'version'], tables_count=2, default_table_documents_count=0, all_tables_documents_count=['requirements=9', 'version=1']>\n"
+      "<TinyDB tables=['requirements', '_default', 'version'], tables_count=3, default_table_documents_count=0, all_tables_documents_count=['requirements=1', '_default=0', 'version=1']>\n"
      ]
     }
    ],
