minor testing of tinydb

--- a/tinydb_test.ipynb
+++ b/tinydb_test.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "id": "96449903-bcbf-4d8f-a1eb-f09a8475495a",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "e87cd171-74ce-4a86-b080-aea02bf711e1",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<TinyDB tables=['requirements', 'version'], tables_count=2, default_table_documents_count=0, all_tables_documents_count=['requirements=1', 'version=1']>\n"
+      "<TinyDB tables=['packages'], tables_count=1, default_table_documents_count=0, all_tables_documents_count=['packages=1']>\n"
      ]
     }
    ],
@@ -52,12 +52,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "id": "794cb607-184a-463d-9703-f84e94dce4c9",
    "metadata": {},
    "outputs": [],
    "source": [
     "db.storage.flush()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6eb1e9ed-ebad-4394-8f87-eb570d1c6c76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table_name='packages'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a53601c6-f8cd-4133-8ed1-fb546814d55d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table=db.table(table_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "07820881-d88d-4d8e-a998-bc2f806cdf5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table.insert({'numpy': 'value'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "3270cc6d-fafa-45f3-b24e-da35a38b1635",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'packages'}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.tables()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a275b6aa-c137-4c99-ac5b-56c33975c4de",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c504c2fc-a920-4531-bc33-34a52bb30392",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "8"
    ]
   },
   {
