prepared yml templates

--- a/todo.txt
+++ b/todo.txt
@@ -2,7 +2,7 @@
 #
 #
 Next Steps:
-    - yml_empty_templates: yml_templates/<os>/conda_3.9.yml
+    - yml/templates: yml/templates/<os>/conda_3.9.yml
     - yml_export (for server update)
     - cmd_export (bat/sh)
     - implement updates
