--- a/todo.txt
+++ b/todo.txt
@@ -1,12 +1,18 @@
 #
 #
 #
+Address topic of moving environment from Windows -> Linux, ...
+
 replace with call, add os:
     env_cmd.py:256:        db_name = '{}.json'.format(env_name)
     env_cmd.py:286:        db_name = '{}.json'.format(env_name)
     req_cmd.py:19:        db_name = '{}.json'.format(env_name)
     scripts_cmd.py:13:        db_name = '{}.json'.format(env_name)
     statistics.py:13:        db_name = '{}.json'.format(env_name)
+
+Also:
+    consider flag in requirements
+        a==1.2.3 ; sys_platform == "win32"  # flag those internally
 
 Next Steps:
     - need to split JSONs by OS, then add transfer, merge and so on ...
