--- a/todo.txt
+++ b/todo.txt
@@ -1,16 +1,36 @@
 #
 #
 #
-Bugs
-    * when collecting releases_recent, it seems to keep 10.
-        Of those all could be 'a' or 'b' releases, so we need to keep more or back until we get a good release
-    * remove yanked releases from releases_recent list
-
 Features:
     Install new packages: a=1.0 b=2.0 c=3.0 .. or form of requirements
         Use --dry-run, attempt and roll back if not sucessful
         Parse: Would install x1==2.6.0 x2==4.21.7
             If more than one -> danger
+
+    Example:
+        pip install --dry-run pywhatkit
+        # triggers several others - try to install one by one
+        # Would install
+        ## MouseInfo-0.1.3     .. splits into 3 .. recurse
+        ## PyAutoGUI-0.9.53    .. splits into 9 .. recurse
+        ## PyGetWindow-0.0.9   .. splits into 2 .. recurse
+        ## PyMsgBox-1.0.9      .. works 0
+        ## PyRect-0.2.0        .. works 0
+        ## PyScreeze-0.1.28    .. works 0
+        ## pyperclip-1.8.2     .. works 0
+        ## pytweening-1.0.4    .. works 0
+        ## rubicon-objc-0.4.2  .. works 0
+        ## wikipedia-1.4.0     .. works 0
+        ## pywhatkit-5.4
+        put above in a list, which original target last
+        scan log for 'Uninstalling'
+        put them into a list, and try one by one
+
+Bugs
+    * when collecting releases_recent, it seems to keep 10.
+        Of those all could be 'a' or 'b' releases, so we need to keep more or back until we get a good release
+    * remove yanked releases from releases_recent list
+
 
 Address topic of moving environment from Windows -> Linux, ...
 
